public/css/style.css
/* ... */
.tag-mismatch{float:left !important}

.warnings{color:#D65959;display:none;background:url(../img/red-error-symbol.png) 0px 4px no-repeat;float:left;position:relative;left:52%;margin-top:-12px;padding:2px  0 2px 18px;font-size:14px;background-size:15px;}
.mismatch .warnings{display:block}


ul{margin:0;padding:0;list-style:none}
.wrapper{width:98%;min-width:960px;margin:0px auto 0 auto;padding:5px 0 0 0;width:92%;font-size:14px;position:relative;text-align:left;}
.breadcrumbs{float:left;color:#fff;padding:19px 0 4px 0px;}
.cattool .breadcrumbs{padding:22px 0 4px 0px;}

.cattool .downloadtr-button{margin:2px -10px 0px 10px !important;}

.breadcrumbs a{color:#fff}
.breadcrumbs a:hover{text-decoration:none}

.breadcrumbs #pname
	{

	float: left;
    max-width: 300px;
    overflow: hidden;
margin-left:2px
	}


.logo{float:left;border:0;margin-top:10px;background:url(../img/logo.png) 0px 2px no-repeat;width:145px;height:31px; background-size: 130px 26px;}




.grayed{background:#000;width:100%;height:100%;position:fixed;top:0;left:0;opacity: 0.2;display:none;z-index:9;}
.blacked{background:#000;width:100%;height:100%;position:fixed;top:0;left:0;opacity: 0.5;display:none;z-index:1000;}



body.editing .grayed,body.virtualEditing .grayed{display:block;}
.toggle{display:none;}
.editor .toggle{display:block;}









footer{background:#6d6e71;height:27px;text-align:right;border-top:1px solid #333;color:#fff;position:fixed;bottom:0;left:0;width:100%;z-index:999999999999;}
.editlog{margin-right:23px;}
footer p, .projectbar p{margin:0 5px 0 0;padding:0;float:left;}
footer ul, .projectbar  ul{margin:-5px 0 0 0;padding:0;float:left;border-right:1px solid #333;}

footer li, .projectbar li {margin:0 0px 0 0;padding:5px 10px;float:left;border-left:1px solid #333;}

footer a, .projectbar a{color:#fff;text-shadow:none;}
footer a:hover{text-decoration:none}
#rejected.hidden{display:none}
footer .wrapper{text-align:right}
.meter {
	height: 15px;  /* Can be anything */
	width:15%;
	float:left;
	margin:0 15px 5px 0 !important;
	border:1px solid #616160;
	background:#fff;
-moz-box-shadow: inset 0 1px 3px 0px #ccc;
-webkit-box-shadow: inset 0 1px 3px 0px #ccc;
box-shadow: inset 0 1px 3px 0px #ccc;

}

.approved-bar{	background-color: #7cc576;}
.draft-bar  {	background-color: #d0d1d1;}
.rejected-bar  {	background-color: #ed1c24;}
.translated-bar{	background-color: #09beec;}

.meter > a {
	display: block;
	height: 100%;

	float:left;
	position: relative;
	overflow: hidden;
	-webkit-transition: all  200ms ease-in; transition: all  200ms ease-in;
}


.meter > a:after {
	content: "";
	position: absolute;
	top: 0; left: 0; bottom: 0; right: 0;
	background-image:
	   -webkit-gradient(linear, 0 0, 100% 100%,
	      color-stop(.25, rgba(255, 255, 255, .2)),
	      color-stop(.25, transparent), color-stop(.5, transparent),
	      color-stop(.5, rgba(255, 255, 255, .2)),
	      color-stop(.75, rgba(255, 255, 255, .2)),
	      color-stop(.75, transparent), to(transparent)
	   );
	background-image:
		-webkit-linear-gradient(
		  -45deg,
	      rgba(255, 255, 255, .2) 25%,
	      transparent 25%,
	      transparent 50%,
	      rgba(255, 255, 255, .2) 50%,
	      rgba(255, 255, 255, .2) 75%,
	      transparent 75%,
	      transparent
	   );
	background-image:
		-moz-linear-gradient(
		  -45deg,
	      rgba(255, 255, 255, .2) 25%,
	      transparent 25%,
	      transparent 50%,
	      rgba(255, 255, 255, .2) 50%,
	      rgba(255, 255, 255, .2) 75%,
	      transparent 75%,
	      transparent
	   );
	background-image:
		-ms-linear-gradient(
		  -45deg,
	      rgba(255, 255, 255, .2) 25%,
	      transparent 25%,
	      transparent 50%,
	      rgba(255, 255, 255, .2) 50%,
	      rgba(255, 255, 255, .2) 75%,
	      transparent 75%,
	      transparent
	   );
	background-image:
		-o-linear-gradient(
		  -45deg,
	      rgba(255, 255, 255, .2) 25%,
	      transparent 25%,
	      transparent 50%,
	      rgba(255, 255, 255, .2) 50%,
	      rgba(255, 255, 255, .2) 75%,
	      transparent 75%,
	      transparent
	   );
	z-index: 1;
	-webkit-background-size: 50px 50px;
	-moz-background-size:    50px 50px;
	background-size:         50px 50px;
	-webkit-animation: move 2s linear infinite;
	  
	overflow: hidden;
}

.pagination{float:right;border-right:1px solid #000;margin-left:10px; margin-right:18px;}
.pagination li{padding:5px 0 !important;}

.pagination a{text-decoration:none;padding:5px 15px;font-weight:bold;-webkit-transition: all  100ms ease-in; transition: all  100ms ease-in;}

.pagination a:hover{background:#09beec; }

.pagination a:active{box-shadow: inset 0 1px 1px #000;-webkit-box-shadow: inset 0 1px 1px #000; }



.number{
	width:50px !important;	position:absolute;	top:18px;left:-55px;text-align:center;	display:block;	height:10px;
		font-size:12px;z-index:99999;color:#999;text-decoration:none; cursor: default;}
section:hover .number{color:#6d6e71}		
		
		.editor .number{
top:43px !Important;}
		

.comment{position:absolute;right:0;}
/*
.editor .status-container{display:none;}
*/
/* BAK
.commentballoon{position:absolute;right:0;top:0;width:30px !important; margin-right:-57px !important;height:100% !important;font-size:10px;text-align:center !important;z-index:99;}
.commentballoon a{display:block;padding:16px 0 10px 0px !important;}
*/
.comments{position:absolute;right:10px;top:20px;width:30px !important; margin-right:-50px !important;height:100% !important;font-size:10px;text-align:center !important;z-index:99;}
.comments a{display:block;padding:16px 0 10px 0px !important;}
section{position:relative;float:left;width:100%;-webkit-transition: all  100ms ease-in; transition: all  100ms ease-in;}

/*projectbar*/
.languages{text-align:center !important;padding:15px 0 0 50px; }
.wordscounter{float:right;text-align:right}
.wordcounter{text-align:right;margin-right:-70px !important}
.wordcounter strong{margin-right:0px}
strong:first-child{margin-right:10px !important}

.download{ position:absolute;}
/* ... */

